# mnemo

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: main.py
config/: mnemo.default.json
mnemo/: __init__.py  config.py  models.py
mnemo/adapters/: __init__.py  ktao_adapter.py  mem0_adapter.py
mnemo/consumer/: __init__.py  consume_state.py
mnemo/injector/: __init__.py  block_builder.py  hash_debounce.py  unified_inject.py
mnemo/ranker/: __init__.py  retrieval_rank.py
mnemo/scanner/: fact_scanner.py
tests/: __init__.py  test_block_builder.py  test_consume_state.py  test_hash_debounce.py
tools/: migrate_from_v1.py
